Travis build test

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_install:
   - docker build -t $(cat NAME) .
 
 script:
-  - docker run --rm --volume tests/travis-sample-app.sh:/travis-sample-app.sh $(cat NAME) /bin/bash /travis-sample-app.sh
+  - docker run --rm --volume ./tests:/tests $(cat NAME) /bin/bash /tests/travis-sample-app.sh
